--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,43 @@
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# personal
+개인자료/
+가이드라인/
+project_apis.csv
+backend_reference/
+.env
+.env.*.local
+.env.local
+
 node_modules/
 dist/
-.vite/
-.env
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.trae
+.DS_Store
+Thumbs.db
+*.suo
+*.ntvs
+*.njsproj
+*.sln
+*.sw?
+*.swp
+
+# Build Output
+dist/
+dist-ssr/
+build/
+out/
+
